# simple_nn

./: Cargo.toml  README.md  save.json
examples/: character_recognition.rs
src/: lib.rs  math.rs  nn.rs  nn_activation.rs  nn_serde.rs
src/tests/: backprop_test.rs  dot_product_test.rs  get_max_test.rs  matrix_addition.rs  matrix_mult_test.rs  mod.rs  nn_saving_test.rs  nn_test.rs  sigmoid_test.rs  soft_max_test.rs  transpolation_test.rs  vector_sub_test.rs  vector_tests.rs
