[package]
name = "simple_nn"
version = "0.1.0"
edition = "2021"
description = "A simple nueral network library."
license = "MIT"
keywords = ["rand", "neural_network", "linear_algebra", "math"]
exclude = ["example"]
repository = "https://github.com/AngryBeltMan/simple_nn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["std", "std_rng"] }
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.104"
